// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RiskLevel Renders elevated risk correctly. 1`] = `
<div>
  <span
    style="color: orange;"
  >
    Elevated
  </span>
</div>
`;

exports[`RiskLevel Renders highest risk correctly. 1`] = `
<div>
  <span
    style="color: red;"
  >
    Highest
  </span>
</div>
`;

exports[`RiskLevel Renders normal risk correctly. 1`] = `
<div>
  <span
    style="color: green;"
  >
    Normal
  </span>
</div>
`;

exports[`RiskLevel Renders not assessed risk correctly. 1`] = `
<div>
  <span>
    N/A
  </span>
</div>
`;
